# pg_database_ecomm_oltp

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
configs/: settings.py
init_scripts/: 01_init_schema.sql
src/: generator.py  logger.py  postgres_loader.py
tests/integration/: test_db_integration.py
tests/unit/: test_data_contracts.py
